Twitch API Authentication (with a token in the Authorization header) and Exceptions Management & logging